--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -6,6 +6,6 @@
         <li><a href="/admin/users">Manage Users</a></li>
         <li><a href="/auth/register">Register</a></li>
         <li><a href="/auth/login">Login</a></li>
-        <li><a href="/logout">Logout</a></li>
+        <li><a href="/auth/logout">Logout</a></li>
     </ul>
 </nav>
