--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,12 +6,13 @@
         <div>
             <p class="title">ID</p>
             <p class="subtitle">
+                <%= person.id %>
             </p>
         </div>
         <div>
             <p class="title">Email/username</p>
             <p class="subtitle">
-
+                <%= person.email%>
             </p>
         </div>
         <div>
@@ -22,7 +23,7 @@
         <div>
             <p class="title">User object</p>
             <pre class="subtitle">
-
+        <%= person %>
             </pre>
         </div>
     </div>
