Creating Roles for Role Based Access Contol

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,6 +18,7 @@
         <div>
             <p class="title">Role</p>
             <p class="subtitle">
+                <%= person.role %>
             </p>
         </div>
         <div>
