Modifying roles for users

--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -5,12 +5,15 @@
         <% if (user) { %>
 
             <li><a href="/user/profile">Profile</a></li>
-            <li><a href="/auth/logout">Logout</a></li>
-            <li><a href="/admin/users">Manage Users</a></li>
-            <% }else { %>
+            <% if (user.role==='ADMIN' ) { %>
 
-                <li><a href="/auth/register">Register</a></li>
-                <li><a href="/auth/login">Login</a></li>
+                <li><a href="/admin/users">Manage Users</a></li>
                 <% } %>
+                    <li><a href="/auth/logout">Logout</a></li>
+                    <% }else { %>
+
+                        <li><a href="/auth/register">Register</a></li>
+                        <li><a href="/auth/login">Login</a></li>
+                        <% } %>
     </ul>
 </nav>
