--- a/views/manage-users.ejs
+++ b/views/manage-users.ejs
@@ -18,7 +18,16 @@
                             <%= user.email %>
                         </a> </td>
                     <td>
-                        <%= user.role %>
+                        <form action="/admin/update-role" method="post" class="manage-user-form">
+                            <input type="hidden" name="id" value="<%= user.id %>">
+                            <select name="role" id="role">
+                                <option value="ADMIN" <%=user.role==='ADMIN' ?'selected':'' %> > Admin </option>
+                                <option value="MODERATOR" <%=user.role==="MODERATOR" ? 'selected' :'' %> >Moderator
+                                </option>
+                                <option value="CLIENT" <%=user.role==='CLIENT' ? 'selected' : '' %> >Client</option>
+                            </select>
+                            <input type="submit" value="Update">
+                        </form>
                     </td>
 
                 </tr>
